修改压缩规则

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,10 +7,6 @@
   {{{ renderStyles() }}}
 </head>
 <body>
-  <!--vue-ssr-outlet-->
-  <!-- store -->
-  {{{ renderState() }}}
-  <!-- build -->
-  {{{ renderScripts() }}}
+  <!--vue-ssr-outlet-->{{{ renderState() }}}{{{ renderScripts() }}}
 </body>
 </html>
