修改页面展现效果

--- a/source/src/index.template.html
+++ b/source/src/index.template.html
@@ -25,7 +25,7 @@
 
     document.documentElement.classList.add(window.device);
 
-  </script> {{{ renderStyles() }}}
+  </script> {{{ renderResourceHints() }}} {{{ renderStyles() }}}
 </head>
 <body>
   <!--vue-ssr-outlet-->{{{ renderState() }}}{{{ renderScripts() }}}
