--- a/source/src/index.template.html
+++ b/source/src/index.template.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, maximum-scale=0.5, maximum-scale=0.5, user-scalable=no">
+  <meta content="在线教育 精品微课 短视频 在线学习" name="Keywords">
+  <meta name="description" content="在线教育 精品微课 短视频 在线学习" />
   <title>{{ title }}</title>
   <script>
     /* 客户端类型检测 */
